3 different cell change modes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
         <link href="styles/style.css" rel="stylesheet">
       </head>
       <body>
+        <div id="buttons">
+          <button id="solid" onclick="solidMode()">SOLID</button>
+          <button id="random" onclick="randomMode()">RANDOM</button>
+          <button id="gradual" onclick="gradualMode()">GRADUAL</button>
+        </div>
         <div id="container">
-          
         </div>
       </body>
     <script src="scripts/script.js"></script>
